[metadata]
name = django-hypergen
version = 1.5.1
author = Rune Kaagaard & Jeppe Tuxen
author_email = rumi.kg@gmail.com
description = Live view for django and templates in pure python
long_description = file: README_PYPI.rst
long_description_content_type = text/x-rst
url = https://github.com/runekaagaard/django-hypergen
project_urls =
    Bug Tracker = https://github.com/runekaagaard/django-hypergen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Framework :: Django
    Development Status :: 5 - Production/Stable

[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    pyrsistent>=0.16.1

[options.packages.find]
where = src

[options.package_data]
hypergen = *

